--- a/velasquez/trabajofinal/compra/templates/GestionOrdenCompra.html
+++ b/velasquez/trabajofinal/compra/templates/GestionOrdenCompra.html
@@ -14,7 +14,7 @@
                         <input type="text" name="txtid" placeholder="ID" class="form-control">
                     </div>
                     <div class="form-group">
-                        <input type="data" name="txtfec_emision" placeholder="fec_emision" class="form-control">
+                        <input type="date" name="txtfec_emision" placeholder="fec_emision" class="form-control">
                     </div>
                     <div class="form-group">
                         <input type="text" name="txtcantidad" placeholder="cantidad" class="form-control">
@@ -35,14 +35,14 @@
                     <div class="form-group">
                         <select name="txtproveedor" class="form-control">
                             {% for proveedor in proveedores %}
-                                <option value="{{ producto.id }}">{{ proveedor.nombre }}</option>
+                                <option value="{{ proveedor.id }}">{{ proveedor.nombre }}</option>
                             {% endfor %}
                         </select>
                     </div>
                     <div class="form-group">
                         <select name="txtempleado" class="form-control">
                             {% for empleado in empleados %}
-                                <option value="{{ empelado.id }}">{{ empleado.nombre }}</option>
+                                <option value="{{ empleado.id }}">{{ empleado.nombre }}</option>
                             {% endfor %}
                         </select>
                     </div>
@@ -53,7 +53,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-sm-12 col-md-6  col-xl-8 col-xl-8">
+    <div class="col-12">
         <h2>Lista de Compra</h2>
         <table class="table" style="background-color: #4591B8;">
             <thead>
@@ -80,8 +80,8 @@
                     <td>{{ c.producto }}</td>
                     <td>{{ c.proveedor }}</td>
                     <td>{{ c.empleado }}</td>
-                    <td><a href="edicionempleado/{{e.id}}" class="btn btn-info">Editar</a></td>
-                    <td><a href="eliminarempleado/{{e.id}}" class="btn btn-danger">Eliminar</a></td>
+                    <td><a href="edicioncompra/{{c.id}}" class="btn btn-info">Editar</a></td>
+                    <td><a href="eliminarcompra/{{c.id}}" class="btn btn-danger">Eliminar</a></td>
                 </tr>
                 {% endfor %}
             </tbody>
