--- a/velasquez/trabajofinal/compra/templates/base.html
+++ b/velasquez/trabajofinal/compra/templates/base.html
@@ -27,17 +27,10 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{% url 'ordencompra'%}">OrdenCompra</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Lista rapida de informacion
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Lista de cursos</a></li>
-                  <li><a class="dropdown-item" href="#">Lista de especialidades</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Lista de docentes</a></li>
-                  <li><a class="dropdown-item" href="#">Lista de alumnos</a></li>
-                </ul>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'pagos'%}">Pagos</a>
+              </li>
+              
             </ul>
           </div>
         </div>
